--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   pin_code_fields: ^8.0.1
   flutter_native_splash:
   form_validator: ^2.1.1
+  fluttertoast: ^8.2.4
+  flashy_tab_bar2: ^0.0.6
+  smooth_page_indicator: ^1.1.0
 
 flutter_native_splash:
   color: "#de0b30"
